[package]
name = "grapple-frc-msgs"
version = "2024.0.3"
edition = "2021"
description = "Grapple's repository of FRC CAN and other protocols"
documentation = "https://docs.rs/grapple-frc-msgs"
repository = "https://github.com/GrappleRobotics/frc-msgs"
readme = "README.md"
authors = ["Jaci Brunning"]

license = "MIT"

[dependencies]
anyhow = { version = "1.0.76", default-features = false }
binmarshal = { version = "^0.2.0", default-features = false, features = ["anyhow"] }
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.159", optional = true, features = ["derive"] }
smallvec = "1.10.0"
strum_macros = "0.24.3"

[features]
std = ["binmarshal/std", "anyhow/std"]
serde = ["dep:serde", "binmarshal/serde"]
schema = ["dep:schemars", "binmarshal/schema"]
default = ["std", "serde", "schema"]

[dev-dependencies]
rand = "0.8.5"
