[package]
name = "grapple-frc-msgs"
version = "2024.4.5"
edition = "2021"
description = "Grapple's repository of FRC CAN and other protocols"
documentation = "https://docs.rs/grapple-frc-msgs"
repository = "https://github.com/GrappleRobotics/frc-msgs"
readme = "README.md"
authors = ["Jaci Brunning"]

license = "GPL-3.0"

[dependencies]
anyhow = { version = "1.0.76", default-features = false }
binmarshal = { version = "^1.1.0", default-features = false, features = ["anyhow"] }
bounded-static = { version = "0.7.0", default-features = false, features = ["alloc", "collections", "derive"] }
schemars = { version = "0.8.12", features = ["smallvec"], optional = true }
serde = { version = "1.0.159", optional = true, features = ["derive"] }
smallvec = "1.11.2"
strum_macros = "0.24.3"
pyo3 = { version = "0.19.0", optional = true }

[features]
std = ["binmarshal/std", "anyhow/std"]
serde = ["dep:serde", "binmarshal/serde", "smallvec/serde"]
schema = ["dep:schemars", "binmarshal/schema"]
pyo3 = ["dep:pyo3"]
lasercan_nop_patch = ["binmarshal/lasercan_nop_patch"]

ni = []
grapple_lasercan = []
grapple_mitocandria = []
grapple_flexican = []
grapple_jms = []

default = ["std", "serde", "schema", "ni", "grapple_lasercan", "grapple_mitocandria", "grapple_flexican", "grapple_jms"]

[dev-dependencies]
rand = "0.8.5"
